[gd_scene load_steps=5 format=3 uid="uid://b3jkepoljxjno"]

[ext_resource type="Script" path="res://credits_screen/credits_screen.gd" id="1_p06wm"]
[ext_resource type="Texture2D" uid="uid://d20rk4axot4s0" path="res://assets/art/background_sprite.png" id="2_k333m"]
[ext_resource type="Theme" uid="uid://bf61vonsbfr84" path="res://assets/default_theme.tres" id="3_2ejes"]
[ext_resource type="Texture2D" uid="uid://dvhldnbscs431" path="res://assets/art/WreckingBallGamesLogo.png" id="3_sdb1c"]

[node name="CreditsScreen" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p06wm")
title_path = "res://title_menu/title_menu.tscn"

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(180, 320)
texture = ExtResource("2_k333m")
hframes = 3

[node name="Stars" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(180, 320)
texture = ExtResource("2_k333m")
hframes = 3
frame = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="WBGLogo" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(259, 132)
texture = ExtResource("3_sdb1c")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "Made for Godot Wild Jam #60"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "Game by Raymond McDonald"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "Design by Celosia Prox"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "Financed by Juan Zubieta"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "We are Wrecking Ball Games"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "This game includes public domain 
sounds and music"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "Music by Zane Little"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxButtons" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="ReturnButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxButtons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "Return to Title"

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxButtons"]
layout_mode = 2
theme = ExtResource("3_2ejes")
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxButtons/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxButtons/QuitButton" to="." method="_on_quit_button_pressed"]
